--- a/app/design/frontend/rwd/cvape/layout/local.xml
+++ b/app/design/frontend/rwd/cvape/layout/local.xml
@@ -2,6 +2,7 @@
 <layout>
     <default>
         <reference name="head">
+            <action method="removeItem"><type>skin_css</type><name>css/styles.css</name></action>
             <action method="addItem"><type>skin_css</type><name>css/bootstrap.css</name></action>
             <action method="addItem"><type>skin_css</type><name>css/font-awesome.css</name></action>
             <action method="addItem"><type>skin_css</type><name>css/owl.carousel.min.css</name></action>
@@ -19,6 +20,7 @@
         
         <reference name="footer.javascript">
             <action method="addItem"><type>skin_js</type><name>js/jquery-1.11.3.min.js</name><params/></action>
+            <action method="addItem"><type>skin_js</type><name>js/jQuery-no-conflict.js</name><params/></action>
             <action method="addItem"><type>skin_js</type><name>js/bootstrap.js</name><params/></action>
             <action method="addItem"><type>skin_js</type><name>js/owl.carousel.js</name><params/></action>
             <action method="addItem"><type>skin_js</type><name>js/bootstrap-number-input.js</name><params/></action>
@@ -26,6 +28,7 @@
             <action method="addItem"><type>skin_js</type><name>js/jquery.mCustomScrollbar.concat.min.js</name><params/></action>
             <action method="addItem"><type>skin_js</type><name>js/jquery-listnav.js</name><params/></action>
             <action method="addItem"><type>skin_js</type><name>js/site.js</name><params/></action>
+            <action method="addItem"><type>skin_js</type><name>js/mCustScrollInit.js</name><params/></action>
         </reference>
             
     </default>
