--- a/app/design/frontend/rwd/cvape/template/page/html/header.phtml
+++ b/app/design/frontend/rwd/cvape/template/page/html/header.phtml
@@ -28,74 +28,48 @@
  */
 ?>
 
-<div class="header-language-background">
-    <div class="header-language-container">
-        <div class="store-language-container">
-            <?php echo $this->getChildHtml('store_language') ?>
-        </div>
-
-        <?php echo $this->getChildHtml('currency_switcher') ?>
-
-        <p class="welcome-msg"><?php echo $this->getChildHtml('welcome') ?> <?php echo $this->getChildHtml('accountLinks') ?></p>
-    </div>
-</div>
-
-<header id="header" class="page-header">
-    <div class="page-header-container">
-        <a class="logo" href="<?php echo $this->getUrl('') ?>">
-            <img src="<?php echo $this->getLogoSrc() ?>" alt="<?php echo $this->getLogoAlt() ?>" class="large" />
-            <img src="<?php echo $this->getLogoSrcSmall() ?>" alt="<?php echo $this->getLogoAlt() ?>" class="small" />
-        </a>
-
-        <?php // In order for the language switcher to display next to logo on smaller viewports, it will be moved here.
-              // See app.js for details ?>
-        <div class="store-language-container"></div>
-
-        <!-- Skip Links -->
-
-        <div class="skip-links">
-            <a href="#header-nav" class="skip-link skip-nav">
-                <span class="icon"></span>
-                <span class="label"><?php echo $this->__('Menu'); ?></span>
-            </a>
-
-            <a href="#header-search" class="skip-link skip-search">
-                <span class="icon"></span>
-                <span class="label"><?php echo $this->__('Search'); ?></span>
-            </a>
-
-            <div class="account-cart-wrapper">
-                <a href="<?php echo $this->helper('customer')->getAccountUrl(); ?>" data-target-element="#header-account" class="skip-link skip-account">
-                    <span class="icon"></span>
-                    <span class="label"><?php echo $this->__('Account'); ?></span>
-                </a>
-
-                <!-- Cart -->
-
-                <div class="header-minicart">
-                    <?php echo $this->getChildHtml('minicart_head'); ?>
+<header class="headerbar">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="header_top clearfix">
+                <div class="header_top_left">FREE SHIPPING ON ALL U.S. ORDERS !</div>
+                <div class="header_top_right">
+                    <div class="top_social_icon"> <a href="#"><i class="fa fa-facebook-official"></i></a> <a href="#"><i class="fa fa-twitter"></i></a> <a href="#"><i class="fa fa-instagram"	></i></a> <a href="#"><i class="fa fa-youtube"></i></a> <a href="#"><i class="fa fa-yelp"></i></a> <a href="#"><i class="fa fa-envelope"></i></a> </div>
+                    <div class="top_need_help">NEED HELP ?  CALL : 855.755.VAPE (8273)	OR <a class="askdeejay" href="#">ASK DEEJAY</a></div>
                 </div>
             </div>
-
-
-        </div>
-
-        <!-- Navigation -->
-
-        <div id="header-nav" class="skip-content">
-            <?php echo $this->getChildHtml('topMenu') ?>
-        </div>
-
-        <!-- Search -->
-
-        <div id="header-search" class="skip-content">
-            <?php echo $this->getChildHtml('topSearch') ?>
-        </div>
-
-        <!-- Account -->
-
-        <div id="header-account" class="skip-content">
-            <?php echo $this->getChildHtml('topLinks') ?>
+            <div class="header_bottom clearfix headersticky">
+                <div class="header_bottom_left">
+                    <div class="logo"> <a href="index.html" class="oncroll_page"><img src="<?php echo $this->getSkinUrl('images/logo_scroll.png');?>" alt="CSVAPE"></a> <a href="index.html" class="normal_page"><img src="<?php echo $this->getSkinUrl('images/logo.png');?>" alt="CSVAPE"></a> </div>
+                </div>
+                <div class="header_bottom_right">
+                    <div class="special_promotion">Special Promotion Here !</div>
+                    <div class="search_cart_login clearfix">
+                        <div class="top_search col-md-8  col-lg-8 col-lg-push-1">
+                            <div class="input-group form-group-lg">
+                                <div class="input-group-btn">
+                                    <button type="button" class="btn btn-default btn-lg dropdown-toggle" data-toggle="dropdown"> All <span class="caret"></span> </button>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="#">Categories 1</a></li>
+                                        <li><a href="#">Categories 22</a></li>
+                                        <li><a href="#">Categories 333</a></li>
+                                        <li><a href="#">Categories 4444</a></li>
+                                    </ul>
+                                </div>
+                                <input type="text" class="form-control" placeholder="What are you looking for ?">
+                                <div class="input-group-btn">
+                                    <button type="submit" class="btn btn-default btn-lg"> <i class="fa fa-search"></i> </button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="top_categories_search col-md-4 col-lg-3 col-lg-push-1">
+                            <div class="top_cart_login"> <a href="#" class="btn text-center cart_icon"><span class="cartnumber">55</span><span class="cart_icon_span"></span><br>
+                                    Bag </a> <a href="#" class="btn text-center login_icon"><span class="login_icon_span"></span><br>
+                                    Sign in/Register </a> </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </header>
